# eadrese

./: .gitignore  Bibl_integr_instrukcija.docx  README.md  Sist_integr_instrukcija_testa_vide.docx  eadrese_client.php  pyproject.toml  viss_2016.ii_.dit_v1.09.docx  work-in-progress
.github/workflows/: ci.yml
docs/: python-client-spec.md  security.md
examples/: receive_and_confirm.py  send_eadrese_invoice.py  send_eds_invoice.py  send_einvoice_test.py  send_test_message.py
latvian_einvoice/: __init__.py  attachments.py  auth.py  client.py  config.py  eadrese_client.py  eds_client.py  errors.py  send_eadrese_invoice.py  send_eds_invoice.py  utils.py  utils_crypto.py
latvian_einvoice/api/: addressbook.py  confirm.py  receive.py  send.py
latvian_einvoice/soap/: __init__.py  client.py  envelope.py
php/: README.md  composer.json  phpunit.xml
php/examples/: sidecar_send.php  soap_get_message.php  soap_get_message_list.php  soap_receive_and_confirm.php  soap_send.php  soap_send_raw_envelope.php
php/src/: Attachment.php  Client.php  Config.php  SidecarClient.php
php/src/Envelope/: Builder.php
php/src/Soap/: DirectSoapClient.php  DivEnvelopeSigner.php  DivMessageDecoder.php  DivNetify.php  WsseSigner.php
php/src/Utils/: Crypto.php  Pem.php  Uuid.php  X509.php
php/tests/: CryptoTest.php  DivEnvelopeSignerTest.php  DivNetifyTest.php  EnvelopeBuilderMimeTypeTest.php  MtomParsingTest.php
tests/: test_addressbook.py  test_crypto.py  test_div_signatures.py  test_eadrese.py  test_receive.py  test_wsse.py  test_wsse_response.py
